# streamobs

./: .gitignore  DES.html  LSST.html  README.md  about.html  citation.html  column_convention.html  data.html  genindex.html  index.html  installation.html  modifying_streamobs.html  modules.html  multisurvey.html  new_survey.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  roman.html  search.html  searchindex.js  streamobs.functions.html  streamobs.html  streamobs.model.html  streamobs.observed.html  streamobs.plotting.html  streamobs.samplers.html  streamobs.surveys.html  streamobs.utils.html  update_data.html
_modules/: index.html
_sources/: about.md  data.md  modifying_streamobs.md  modules.rst  streamobs.observed.rst  streamobs.plotting.rst  streamobs.surveys.rst  streamobs.utils.rst  update_data.md
config/: pal5_config.yaml  toy1_config.yaml
docs/: .nfs000000f38d369fc80008fad7  README.md  deploy_to_gh_pages.sh  requirements.txt
examples/: tutorial_generate_datamocks.html  tutorial_inject_stream.html
notebooks/: create_streamobs_files_hlwas.ipynb  injection_lsst_example.ipynb  multisurvey_phases_demo.ipynb  roman_dc2_combine_plan.md  tutorial_generate_datamocks.ipynb  tutorial_inject_stream.ipynb
scripts/: build_multisurvey_demo_nb.py
streamobs/: __init__.py  columns.py  functions.py  match_filter.py  model.py  observed.py  plotting.py  samplers.py  surveys.py  utils.py
surveys/: DES.html  LSST.html  Roman.html
tests/: conftest.py  test_background.py  test_functions.py  test_match_filter.py  test_model.py  (+5 more)
(+61 files in other folders)
